--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,18 @@ include = [
     "/deps/boringssl/LICENSE",
 ]
 
+[package.metadata.docs.rs]
+no-default-features = true
+features = ["qlog"]
+
 [features]
+default = ["qlog"]
+
 # build the FFI API
 ffi = []
+
+# enable support for the qlog
+qlog = ["dep:serde", "dep:serde_json", "dep:serde_derive", "dep:serde_with"]
 
 [dependencies]
 bytes = "1"
@@ -43,10 +52,10 @@ strum_macros = "0.24"
 rand = "0.8.5"
 smallvec = { version = "1.10", features = ["serde", "union"] }
 lru = "0.12"
-serde = { version = "1.0.139", features = ["derive"] }
-serde_json = { version = "1.0", features = ["preserve_order"] }
-serde_derive = "1.0"
-serde_with = "3.0.0"
+serde = { version = "1.0.139", features = ["derive"], optional=true }
+serde_json = { version = "1.0", features = ["preserve_order"], optional=true }
+serde_derive = { version = "1.0", optional=true }
+serde_with = { version="3.0.0", optional=true }
 hex = "0.4"
 priority-queue = "1.3.2"
 sfv = { version = "0.9" }
